Actuaizacion: Seccion dispositivo terminada

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -11,6 +11,8 @@
   --color-in-cyan-base: #00BEB4;
   --color-in-orange: #FFB531;
 
+  --color-in-variant-cyan: #CDFBF8;
+
   /* FONTS */
   --font-in-nunito: "Nunito", sans-serif;
   --font-in-poppins: "Poppins", sans-serif;
