--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -17,7 +17,50 @@
   --font-in-nunito: "Nunito", sans-serif;
   --font-in-poppins: "Poppins", sans-serif;
   --font-in-roboto: "Roboto", sans-serif;
+
+  --animate-heartbeat: heartbeat 3s ease-in-out infinite;
+  --animate-pulse: pulse 3s ease-in-out infinite;
+
+  @keyframes heartbeat {
+    0%, 100% {
+      transform: scale(1);
+    }
+    14% {
+      transform: scale(1.1);
+    }
+    28% {
+      transform: scale(1);
+    }
+    42% {
+      transform: scale(1.1);
+    }
+    70% {
+      transform: scale(1);
+    }
+  }
+
+
+  @keyframes pulse {
+    0% {
+      transform: scale(1);
+    }
+    14% {
+      transform: scale(1.1);
+    }
+    28% {
+      transform: scale(1);
+    }
+    42% {
+      transform: scale(1.1);
+    }
+    70% {
+      transform: scale(1.2);
+    }
+  }
 }
+
+
+
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
