--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,7 @@
   --color-in-blue: #004569;
   --color-in-cyan-base: #00BEB4;
   --color-in-orange: #FFB531;
+  --color-in-orange-hover: #E6A02C;
 
   --color-in-variant-cyan: #CDFBF8;
 
