--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -58,6 +58,19 @@
       transform: scale(1.2);
     }
   }
+  /* Ruleta */
+  @keyframes slide-up {
+    from {
+      transform: translateY(100%);
+      opacity: 0;
+    }
+    to {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+
+  --animate-slide-up: slide-up 0.6s ease-out forwards;
 }
 
 
